# invoice-app

./: .gitignore  AGENTS.md  LICENSE  README.md  bts.jsonc  bunfig.toml  package.json
apps/desktop/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx  orpc.ts  tauri-debug.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/migrations/: 0001_concerned_shaman.sql  0006_amusing_amphibian.sql  0007_skinny_nebula.sql  0008_rapid_wendell_rand.sql
apps/desktop/src-tauri/resources/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0008_snapshot.json  _journal.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: SidecarStatus.tsx
apps/server/: .env.example  .gitignore  README.md  package.json  tsconfig.json  tsdown.config.ts
apps/server/migrations/: 0000_magical_black_queen.sql  0002_square_siren.sql  0003_cool_king_cobra.sql  0004_cynical_overlord.sql  0005_regular_raza.sql
apps/server/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0007_snapshot.json  _journal.json
apps/server/scripts/: build-tauri.ts
apps/server/src/: app.ts  index.ts  migrate.ts
apps/server/src/lib/: logger.ts
apps/web/: .gitignore  README.md  index.html  package.json
apps/web/src/: main.tsx
scripts/: release-macos.sh  tauri-build-macos.sh
(+13 files in other folders)
