[package]
name = "desktop"
version = "1.0.0"
description = "VMT Invoice Desktop App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "invoice_app"
path = "src/main.rs"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
tokio = { version = "1", features = ["sync", "time", "macros"] }
